# LSCMake

./: .gitignore  CMakeLists.txt  README.md  configure.sh
src/: main.cpp
